--- a/thanks.html
+++ b/thanks.html
@@ -3,76 +3,36 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <!-- Primary SEO -->
   <title>Thanks — You’re on the list! | System & Flow</title>
   <meta name="description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
   <link rel="canonical" href="https://systemnflow.com/thanks.html" />
-  <meta name="robots" content="index,follow" />
+  <meta name="robots" content="noindex,follow" />
   <meta name="theme-color" content="#0b1220" />
-
-  <!-- Open Graph / Social -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Thanks — You’re on the list! | System & Flow" />
-  <meta property="og:description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
-  <meta property="og:url" content="https://systemnflow.com/thanks.html" />
-  <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
-  <meta property="og:site_name" content="System & Flow" />
-
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Thanks — You’re on the list! | System & Flow" />
-  <meta name="twitter:description" content="Thanks for reaching out. We'll be in touch soon with updates, tips, and specials." />
-  <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
-
-  <!-- JSON‑LD (Organization) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "System & Flow",
-    "url": "https://systemnflow.com/",
-    "logo": "https://systemnflow.com/logo.png",
-    "sameAs": [
-      "https://www.instagram.com/systemnflow",
-      "https://www.tiktok.com/@systemnflow",
-      "https://www.linkedin.com/company/systemnflow"
-    ]
-  }
-  </script>
-
-  <!-- Performance hints -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
   <link rel="preload" href="/styles.css" as="style" />
-
-  <!-- Styles & Favicon -->
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-1FRFWG4X18');
-  </script>
+  <!-- Favicons -->
+  <link rel="icon" href="/assets/img/favicon.ico" />
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png" />
 
   <style>
-    .t-wrap { max-width: 820px; margin: 0 auto; padding: 70px 20px 40px; text-align:center; }
-    .t-badge { display:inline-flex; align-items:center; justify-content:center; width:70px; height:70px; border-radius:50%; background:#0f1f14; border:1px solid #1f5d38; color:#c9f1dc; font-size:30px; }
-    .t-title { font-size: clamp(26px, 4vw, 38px); margin:16px 0 8px; }
-    .t-sub { color: var(--muted); max-width: 620px; margin: 0 auto 18px; }
-    .t-actions { display:flex; gap:12px; flex-wrap:wrap; justify-content:center; margin-top:18px; }
-    .t-note { color: var(--muted); font-size:14px; margin-top:12px; }
+    .t-wrap{max-width:820px;margin:0 auto;padding:70px 20px 40px;text-align:center}
+    .t-badge{display:inline-flex;align-items:center;justify-content:center;width:70px;height:70px;border-radius:50%;background:#0f1f14;border:1px solid var(--border);color:#c9f1dc;font-size:30px}
+    .t-title{font-size:clamp(26px,4vw,38px);margin:16px 0 8px}
+    .t-sub{color:var(--muted);max-width:620px;margin:0 auto 18px}
+    .t-actions{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:18px}
+    .t-note{color:var(--muted);font-size:14px;margin-top:12px}
   </style>
 </head>
 <body class="dark">
-
-  <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
@@ -86,28 +46,15 @@
   <main class="wrap t-wrap">
     <div class="t-badge">✔</div>
     <h1 class="t-title">Thanks — you’re on the list!</h1>
-    <p class="t-sub">
-      We received your submission. Keep an eye on your inbox for updates, tips, and specials.
-    </p>
-
+    <p class="t-sub">We received your submission. Keep an eye on your inbox for updates, tips, and specials.</p>
     <div class="t-actions">
       <a class="btn primary" href="/apps.html">Explore Tools</a>
       <a class="btn ghost" href="/">Back to Home</a>
     </div>
-
     <p class="t-note">No longer interested? You can unsubscribe with one click in any email.</p>
   </main>
 
   <div data-include="/partials/footer.html"></div>
   <script src="/include.js" defer></script>
-
-  <!-- Fire the signup event when this page loads -->
-  <script>
-    // This will appear in GA4 as event name: newsletter_signup
-    gtag('event', 'newsletter_signup', {
-      method: 'Formspree',
-      page_location: location.href
-    });
-  </script>
 </body>
 </html>
