--- a/about.html
+++ b/about.html
@@ -10,23 +10,31 @@
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
+  <!-- Social -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="About — System & Flow" />
   <meta property="og:description" content="Built by project managers, for project managers." />
   <meta property="og:url" content="https://systemnflow.com/about.html" />
-  <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
-
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="About — System & Flow" />
   <meta name="twitter:description" content="Built by project managers, for project managers." />
-  <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
   <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
 
+  <!-- Favicons (moved) -->
+  <link rel="icon" href="/assets/img/favicon.ico" />
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png" />
+
+  <!-- GA -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','G-1FRFWG4X18');</script>
 </head>
@@ -34,14 +42,13 @@
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
     <nav class="nav">
       <a href="/">Home</a>
       <a href="/apps.html">Apps</a>
-      <a href="/pricing.html">Pricing</a>
       <a href="/about.html" aria-current="page">About</a>
       <a href="/contact.html">Contact</a>
     </nav>
@@ -59,7 +66,7 @@
     <h2>What we’re building</h2>
     <ul style="color:var(--muted);line-height:1.7">
       <li><strong>Transcript Analyzer (Free):</strong> actions, risks, and decisions in seconds.</li>
-      <li><strong>Status Report Generator (Pro):</strong> exec‑ready one‑pagers.</li>
+      <li><strong>Status Report Generator (Pro):</strong> exec-ready one-pagers.</li>
       <li><strong>Risk Radar (Suite):</strong> proactive risk visibility with mitigations.</li>
       <li><strong>AI Prompt Pack for PMs:</strong> planning, reporting, and alignment shortcuts.</li>
     </ul>
