--- a/terms.html
+++ b/terms.html
@@ -3,41 +3,28 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
   <title>Terms of Use — System & Flow</title>
-  <meta name="description" content="Terms of Use for System & Flow." />
+  <meta name="description" content="Terms and conditions for using System & Flow." />
   <link rel="canonical" href="https://systemnflow.com/terms.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
-
-  <meta property="og:type" content="website" />
   <meta property="og:title" content="Terms of Use — System & Flow" />
-  <meta property="og:description" content="Terms of Use for System & Flow." />
-  <meta property="og:url" content="https://systemnflow.com/terms.html" />
-  <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
-  <meta property="og:site_name" content="System & Flow" />
-
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','G-1FRFWG4X18');</script>
+  <link rel="icon" href="/assets/img/favicon.ico" />
 </head>
 <body class="dark">
   <header class="wrap header">
     <div class="brand">
-      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+      <a href="/" style="display:flex;align-items:center;gap:10px;text-decoration:none">
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
     <nav class="nav">
       <a href="/">Home</a>
       <a href="/apps.html">Apps</a>
-      <a href="/pricing.html">Pricing</a>
-      <a href="/privacy.html">Privacy</a>
       <a href="/terms.html" aria-current="page">Terms</a>
       <a href="/contact.html">Contact</a>
     </nav>
@@ -45,35 +32,27 @@
 
   <main class="wrap hero" style="padding:60px 20px 14px">
     <h1>Terms of Use</h1>
-    <p class="sub">Please read these terms before using System &amp; Flow.</p>
+    <p class="sub">Please read these terms carefully before using System &amp; Flow.</p>
   </main>
 
-  <section class="wrap" style="max-width:850px;padding:10px 20px 50px;line-height:1.7;color:var(--muted)">
-    <h2>1) Acceptance</h2>
-    <p>By accessing or using System &amp; Flow, you agree to these terms.</p>
+  <section class="wrap" style="max-width:820px;padding:10px 20px 50px">
+    <h2>Acceptance</h2>
+    <p>By accessing or using our site or apps, you agree to these Terms and our Privacy Policy.</p>
 
-    <h2>2) Use of the service</h2>
-    <ul>
-      <li>Don’t misuse, attempt to break, or harm the service.</li>
-      <li>You are responsible for content you upload or input.</li>
-    </ul>
+    <h2>Use of the service</h2>
+    <p>You agree not to misuse the service, attempt unauthorized access, or breach applicable laws.</p>
 
-    <h2>3) Intellectual property</h2>
-    <p>All site content, branding, and product IP belong to System &amp; Flow unless noted otherwise.</p>
+    <h2>Intellectual property</h2>
+    <p>All content, trademarks, and software are the property of System &amp; Flow unless otherwise noted.</p>
 
-    <h2>4) No warranties</h2>
-    <p>The service is provided “as is” without warranties of any kind.</p>
+    <h2>Disclaimers</h2>
+    <p>The service is provided “as-is” without warranties of any kind. We’re not liable for damages arising from use.</p>
 
-    <h2>5) Limitation of liability</h2>
-    <p>To the fullest extent permitted by law, System &amp; Flow is not liable for indirect or consequential damages.</p>
+    <h2>Changes</h2>
+    <p>We may update these Terms. Material changes will be noted on this page. Continued use constitutes acceptance.</p>
 
-    <h2>6) Changes</h2>
-    <p>We may update these terms. Continued use constitutes acceptance of changes.</p>
-
-    <h2>7) Contact</h2>
-    <p>Questions? <a href="mailto:info@systemnflow.com">info@systemnflow.com</a></p>
-
-    <p style="font-size:13px;color:#7e8796;margin-top:18px">Last updated: <span id="terms-date">2025-08-21</span></p>
+    <h2>Contact</h2>
+    <p>Questions? <a href="mailto:info@systemnflow.com">info@systemnflow.com</a>.</p>
   </section>
 
   <div data-include="/partials/footer.html"></div>
