--- a/terms.html
+++ b/terms.html
@@ -3,16 +3,40 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Terms of Use — System & Flow</title>
-  <meta name="description" content="Terms and conditions for using System & Flow." />
+
+  <title>Terms of Service — System & Flow</title>
+  <meta name="description" content="System & Flow Terms of Service. Please review the terms before using our SaaS apps and AI prompt packs." />
   <link rel="canonical" href="https://systemnflow.com/terms.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
-  <meta property="og:title" content="Terms of Use — System & Flow" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Terms of Service — System & Flow" />
+  <meta property="og:description" content="Review System & Flow’s Terms of Service." />
+  <meta property="og:url" content="https://systemnflow.com/terms.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Terms of Service — System & Flow" />
+  <meta name="twitter:description" content="Review System & Flow’s Terms of Service." />
+  <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
+
+  <!-- Icons & Manifest -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="manifest" href="/assets/img/site.webmanifest" />
+  <link rel="icon" href="/assets/img/favicon.ico" />
+
+  <!-- Styles -->
   <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/assets/img/favicon.ico" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-1FRFWG4X18');</script>
 </head>
 <body class="dark">
   <header class="wrap header">
