--- a/pricing.html
+++ b/pricing.html
@@ -3,19 +3,40 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <title>Pricing — System & Flow</title>
-  <meta name="description" content="Simple pricing for lightweight PM apps and AI prompts. Start free, upgrade when ready." />
+  <meta name="description" content="Simple, transparent pricing for System & Flow’s SaaS apps and AI prompts." />
   <link rel="canonical" href="https://systemnflow.com/pricing.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="Pricing — System & Flow" />
+  <meta property="og:description" content="Simple, transparent pricing for System & Flow’s SaaS apps and AI prompts." />
+  <meta property="og:url" content="https://systemnflow.com/pricing.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pricing — System & Flow" />
+  <meta name="twitter:description" content="Simple, transparent pricing for System & Flow’s SaaS apps and AI prompts." />
+  <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
+
+  <!-- Icons & Manifest -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="manifest" href="/assets/img/site.webmanifest" />
+  <link rel="icon" href="/assets/img/favicon.ico" />
+
+  <!-- Styles -->
   <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/assets/img/favicon.ico" />
-  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-1FRFWG4X18');</script>
 </head>
 <body class="dark">
   <header class="wrap header">
