--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
@@ -87,7 +87,7 @@
 
   <!-- Hero -->
   <main class="wrap hero">
-    <img src="/assets/img/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" />
+    <img src="/assets/img/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" width="300" height="300" loading="eager" decoding="async" />
     <h1>Project Management.<br/>Simplified.</h1>
     <p class="sub">
       Built <strong>by project managers, for project managers</strong> — System &amp; Flow delivers
