--- a/apps.html
+++ b/apps.html
@@ -45,7 +45,7 @@
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
