--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
   <header class="wrap header">
     <div class="brand">
       <a href="/" style="display:flex;align-items:center;gap:10px;text-decoration:none">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
@@ -60,7 +60,7 @@
   </header>
 
   <main class="wrap rfr-hero">
-    <img src="/assets/img/rfr-unplug.png" alt="Ronnie accidentally unplugged the site" />
+    <img src="/assets/img/rfr-unplug.png" alt="Ronnie accidentally unplugged the site" width="300" height="240" loading="lazy" decoding="async" />
     <h1>Red‑Flag Ronnie got here first.</h1>
     <p class="subtle">The page you’re looking for doesn’t exist (or Ronnie unplugged something he shouldn’t). You’re still in the right place for PM tools that feel simple.</p>
     <div class="rfr-actions">
