--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
   }
   </script>
 
-  <!-- Performance hints -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+    <!-- Performance hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="/styles.css" as="style" />
 
-  <!-- Styles -->
+  <!-- Styles, PWA & Favicon -->
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <link rel="icon" href="/favicon.ico" />
 
   <!-- Favicons & Touch Icons -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
