--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 </head>
 <body class="dark">
 
+   <!-- a11y: Skip link -->
+  <a href="#main" class="skip-link">Skip to content</a>
+
   <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
@@ -97,7 +100,7 @@
       lightweight SaaS apps and AI prompts that cut through chaos and make execution simple.
     </p>
 
-    <div class="cta-row" role="group" aria-label="Primary actions">
+     <div class="cta-row" role="group" aria-label="Primary actions" style="gap:12px;display:flex;flex-wrap:wrap;justify-content:center;">
       <a class="btn primary" href="/apps.html" aria-label="Explore apps and AI prompts">Explore Tools</a>
       <a class="btn ghost" href="/contact.html" aria-label="Join the email list for launch updates">Join the List</a>
     </div>
